--- a/home/templates/products.html
+++ b/home/templates/products.html
@@ -8,7 +8,7 @@
                 <div class="main_img_div"><img src="{{base}}/productimg/{{i.Item_Name}}.jpg" alt="Product Image"
                                 class="center"></div>
                 <div class="items_listname">
-                        <a href="http://127.0.0.1:8000/item/{{i.Item_No}}" style="color: black;"
+                        <a href="item/{{i.Item_No}}" style="color: black;"
                                 id="keyword">{{i.Item_Name}}</a><br>
                         Price: Rs.{{i.Price}}/-
                 </div>
