--- a/home/templates/profilepage.html
+++ b/home/templates/profilepage.html
@@ -60,7 +60,7 @@
         <br>
         <br>
 
-        <a href="http://127.0.0.1:8000/mycart" style="color: black;"> <h4>My Cart Items</h4></a>
+        <a href="mycart" style="color: black;"> <h4>My Cart Items</h4></a>
         <br><br><br><br>
 
         <form action="login/deleteuser/{{request.user.id}}" method="post">
