--- a/home/templates/item_page.html
+++ b/home/templates/item_page.html
@@ -39,7 +39,7 @@
     {% for i in tdb %}
     {% if i.Category == pros.Category %}
     <div class="items_list" id="div">
-        <a href="../item/{{i.Item_No}}" id="keyword"></a>
+        <a href="../item/{{i.Item_No}}" id="keyword">
         <div class="main_img_div"><img src="{{base}}/productimg/{{i.Item_Name}}.jpg" alt="Product Image" class="center">
         </div></a>
         <div class="items_listname">
