--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -13,7 +13,7 @@
                 <label for="password" style="text-align: left;">Password</label>
                 <input type="password" name="password" required><br><br>
                 <input type="submit" value="Login" style="color: black;">
-                <a href="/login/register" style="color: black;"><input type="button" value="Register"></a>
+                <a href="https://newsite123.herokuapp.com/login/register" style="color: black;"><input type="button" value="Register"></a>
             </form>
     </div>
     
