--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -39,7 +39,7 @@
             </table>
             <br>
             <input type="submit" value="Register" style="color: black;">
-            <a href="/login" style="color: black;"><input type="button" value="Login"></a>
+            <a href="https://newsite123.herokuapp.com/login" style="color: black;"><input type="button" value="Login"></a>
         </form>
     </div>
     <script>
