--- a/home/templates/homepage.html
+++ b/home/templates/homepage.html
@@ -30,12 +30,12 @@
         <div class="container" style="min-height: 648px;">
                 {% for i in pros %}
                 <div class="items_list" id="div">
-                        <a href="item/{{i.id}}" id="keyword">
+                        <a href="https://newsite123.herokuapp.com/item/{{i.id}}" id="keyword">
                                 <div class="main_img_div"><img src="{{base}}/productimg/{{i.name}}.jpg"
                                                 alt="Product Image" class="center"></div>
                         </a>
                         <div class="items_listname">
-                                <a href="item/{{i.id}}" style="color: black;" id="keyword">{{i.name}}</a><br>
+                                <a href="https://newsite123.herokuapp.com/item/{{i.id}}" style="color: black;" id="keyword">{{i.name}}</a><br>
                                 Price: Rs.{{i.price}}/-
                         </div>
 
