--- a/home/templates/item_page.html
+++ b/home/templates/item_page.html
@@ -18,7 +18,7 @@
             {% endfor %}
             {% endfor %}
             {% if user.is_authenticated %}
-            <form action="/addtocart" method="post">
+            <form action="https://newsite123.herokuapp.com/addtocart" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="itemno" value="{{pros.Item_No}}"><br>
                 <label for="">Qty</label>
@@ -26,7 +26,7 @@
                 <input type="submit" value="Add to Cart" style="color: black;">
             </form>
             {% else %}
-            <form action="/login/" method="post">
+            <form action="https://newsite123.herokuapp.com/login/" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="path" value="{{request.path}}">
                 <input type="submit" value="Login" style="color: black;">
@@ -39,11 +39,11 @@
     {% for i in tdb %}
     {% if i.Category == pros.Category %}
     <div class="items_list" id="div">
-        <a href="../item/{{i.Item_No}}" id="keyword">
+        <a href="https://newsite123.herokuapp.com/item/{{i.Item_No}}" id="keyword">
         <div class="main_img_div"><img src="{{base}}/productimg/{{i.Item_Name}}.jpg" alt="Product Image" class="center">
         </div></a>
         <div class="items_listname">
-            <a href="../item/{{i.Item_No}}" style="color: black;"
+            <a href="https://newsite123.herokuapp.com/item/{{i.Item_No}}" style="color: black;"
                 id="keyword">{{i.Item_Name}}</a><br>
             Price: Rs.{{i.Price}}/-
         </div>
